--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ theme = "erick"
   title = "Vértice"
   alt = "Vertice"
   source = "img/logo-vertice.png"
-  description = "The Vértice - Paraibano Meeting of Architecture."
+  description = "Vértice - Architecture and Design."
   url = "https://verticeepa.com.br/"
   technologies = ["Wordpress"]
   year = "2017"
